use absolute path for 404 sources

--- a/roles/front/files/404.html
+++ b/roles/front/files/404.html
@@ -2,8 +2,8 @@
 
 <html>
     <head>
-        <link rel="stylesheet" href="./css/style.css" />
-        <script src="./js/404.js"></script>
+        <link rel="stylesheet" href="/css/style.css" />
+        <script src="/js/404.js"></script>
         <meta charset="utf-8" />
         <link rel="shortcut icon" href="/favicon.ico" />
         <meta name="viewport" content="initial-scale=1, width=device-width" />
