add new rinstagib commandment

--- a/roles/front/files/tf2/index.html
+++ b/roles/front/files/tf2/index.html
@@ -75,6 +75,7 @@
             YOUR <strong>AIRSHOTS</strong> WILL <strong>ONE-HIT KILL</strong>.<br/>
             <br/>
             YOUR <strong>SECONDARY</strong> IS REPLACED WITH A <strong>RAILGUN</strong>.<br/>
+            <strong>MOMENTUM</strong> IS <strong>KEY</strong>. DEAL MORE DAMAGE THE <strong>FASTER</strong> YOU MOVE.
             <br/>
             YOUR <strong>MELEE HITS</strong> WILL <strong>ONE-HIT KILL</strong>.<br/>
             <br/>
