add discord icon to tf2 servers, update rig trail

--- a/roles/front/files/index.html
+++ b/roles/front/files/index.html
@@ -73,7 +73,7 @@
 
             <h3><a target="_blank" href="https://github.com/jack-avery/rinstagib">rInstagib</a></h3>
 
-            <iframe type="text/html" width="400" height="225" allow="fullscreen" src="https://www.youtube.com/embed/6GSMJ-zzzig"></iframe>
+            <iframe type="text/html" width="400" height="225" allow="fullscreen" src="https://www.youtube.com/embed/_DH_TAh-4yY"></iframe>
 
             <p>
             <strong>rInstagib</strong> is a <strong>custom gamemode</strong> for <strong>Team Fortress 2</strong>, emulating high-octane gameplay from <strong>Quake</strong>.<br/>
