--- a/roles/front/files/tf2/index.html
+++ b/roles/front/files/tf2/index.html
@@ -25,6 +25,11 @@
                         <path d="M1 11h4v11H1zm15-7.75C16.65 2.49 17.66 2 18.7 2 20.55 2 22 3.45 22 5.3c0 2.27-2.91 4.9-6 7.7-3.09-2.81-6-5.44-6-7.7C10 3.45 11.45 2 13.3 2c1.04 0 2.05.49 2.7 1.25zM20 17h-7l-2.09-.73.33-.94L13 16h2.82c.65 0 1.18-.53 1.18-1.18 0-.49-.31-.93-.77-1.11L8.97 11H7v9.02L14 22l8.01-3c-.01-1.1-.9-2-2.01-2z"></path>
                     </svg>
                 </a>
+                <a target="_blank" href="https://discord.gg/V5Z29SXtsY">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 127.14 96.36">
+                        <g id="图层_2" data-name="图层 2"><g id="Discord_Logos" data-name="Discord Logos"><g id="Discord_Logo_-_Large_-_White" data-name="Discord Logo - Large - White"><path class="cls-1" d="M107.7,8.07A105.15,105.15,0,0,0,81.47,0a72.06,72.06,0,0,0-3.36,6.83A97.68,97.68,0,0,0,49,6.83,72.37,72.37,0,0,0,45.64,0,105.89,105.89,0,0,0,19.39,8.09C2.79,32.65-1.71,56.6.54,80.21h0A105.73,105.73,0,0,0,32.71,96.36,77.7,77.7,0,0,0,39.6,85.25a68.42,68.42,0,0,1-10.85-5.18c.91-.66,1.8-1.34,2.66-2a75.57,75.57,0,0,0,64.32,0c.87.71,1.76,1.39,2.66,2a68.68,68.68,0,0,1-10.87,5.19,77,77,0,0,0,6.89,11.1A105.25,105.25,0,0,0,126.6,80.22h0C129.24,52.84,122.09,29.11,107.7,8.07ZM42.45,65.69C36.18,65.69,31,60,31,53s5-12.74,11.43-12.74S54,46,53.89,53,48.84,65.69,42.45,65.69Zm42.24,0C78.41,65.69,73.25,60,73.25,53s5-12.74,11.44-12.74S96.23,46,96.12,53,91.08,65.69,84.69,65.69Z"/></g></g></g>
+                    </svg>
+                </a>
             </div>
             <div class="navbar">
                 <button class="navtab" onclick="window.location.href='/index.html'" id="backnav">back</button>
@@ -60,7 +65,7 @@
         <div id="rinstagibtab" class="tab">
             <h3><a target="_blank" href="https://github.com/jack-avery/rinstagib">rInstagib</a></h3>
 
-            <iframe class="large" type="text/html" width="800" height="450" allow="fullscreen" src="https://www.youtube.com/embed/6GSMJ-zzzig"></iframe>
+            <iframe class="large" type="text/html" width="800" height="450" allow="fullscreen" src="https://www.youtube.com/embed/_DH_TAh-4yY"></iframe>
 
             <p>
             <strong>rInstagib</strong> is a <strong>custom gamemode</strong> for <strong>Team Fortress 2</strong>, emulating high-octane gameplay from <strong>Quake</strong>.<br/>
