fix sb link on phone

--- a/roles/front/files/tf2/index.html
+++ b/roles/front/files/tf2/index.html
@@ -36,7 +36,7 @@
                 <button class="navtab" onclick="tab('about')" id="aboutnav">about</button>
                 <button class="navtab" onclick="tab('servers')" id="serversnav">servers</button>
                 <button class="navtab" onclick="tab('rinstagib')" id="rinstagibnav">rinstagib?</button>
-                <button class="navtab" onclick="window.location.href='/bans'" id="sbnav">sourcebans</button>
+                <button class="navtab" onclick="window.location.href='/bans/'" id="sbnav">sourcebans</button>
             </div>
         </header>
 
