actually fix tabs on phone

--- a/roles/front/files/index.html
+++ b/roles/front/files/index.html
@@ -2,8 +2,8 @@
 
 <html>
     <head>
-        <link rel="stylesheet" href="/css/style.css" />
-        <script src="/js/script.js"></script>
+        <link rel="stylesheet" href="css/style.css" />
+        <script src="js/script.js"></script>
         <meta charset="utf-8" />
         <link rel="shortcut icon" href="/favicon.ico" />
         <meta name="viewport" content="initial-scale=1, width=device-width" />
@@ -38,11 +38,13 @@
         <div id="abouttab" class="tab">
             <p>my name is jack <span class="tcolors">"raspy"</span> avery and i'm an avid python developer with additional experience in:</p>
             
+            <br/>
             <ul>
                 <li>cybersecurity and penetration testing with TRAs</li>
                 <li>full-stack web development using react/materialui 5, django, and RDBMS (postgreSQL/mySQL)</li>
                 <li>CI/CD cloud deployment with AWS using ansible and docker</li>
             </ul>
+            <br/>
 
             <p>
             my projects are visible under the <a href="#projects">projects</a> tab.<br/>
@@ -66,7 +68,7 @@
                 <li><a target="_blank" href="https://www.twitch.tv/lifeline">lifeline</a></li>
                 <li><a target="_blank" href="https://www.twitch.tv/umbre">umbre</a></li>
             </ul>
-
+            <br/>
             <p><a target="_blank" href="https://discord.gg/qpyT4zx">rasbot official discord</a></p>
 
             <div class="small-vertical-divider"></div>
@@ -80,7 +82,7 @@
             currently, i am administrating a small network of servers running this gamemode using
             <a target="_blank" href="https://github.com/jack-avery/rinstagib-server/tree/prod">ansible playbooks</a>.
             </p>
-
+            <br/>
             <p><a target="_blank" href="https://discord.gg/V5Z29SXtsY">rInstagib official discord</a></p>
 
             <div class="small-vertical-divider"></div>
@@ -96,7 +98,7 @@
             and
             <a target="_blank" href="https://github.com/leighmacdonald/uncletopia/tree/master/roles/sourcemod/files/addons/sourcemod/scripting">sourcemod plugins</a>.
             </p>
-
+            <br/>
             <p><a target="_blank" href="https://discord.gg/caQKCWFMrN">uncletopia official discord</a></p>
 
             <div class="small-vertical-divider"></div>
