--- a/roles/front/files/tf2/index.html
+++ b/roles/front/files/tf2/index.html
@@ -2,7 +2,8 @@
 
 <html>
     <head>
-        <link rel="stylesheet" href="/css/style.css" />
+        <link rel="stylesheet" href="../css/style.css" />
+        <link rel="stylesheet" href="css/style.css" />
         <script src="js/script.js"></script>
         <meta charset="utf-8" />
         <link rel="shortcut icon" href="/favicon.ico" />
