--- a/roles/front/files/index.html
+++ b/roles/front/files/index.html
@@ -60,13 +60,15 @@
 
             <p>
             <strong>rasbot</strong> is an <strong>open-source</strong>, <strong>self-hosted</strong> twitch bot alternative made in <strong>python</strong> with a modular design,
-            allowing users to extend the base design with their own python code using manifests for automatic dependency installation and updates.<br/>
+            allowing users to extend the base design with their own plugins using manifests for automatic dependency installation and updates.<br/>
             currently, some <strong>osu!</strong> twitch streamers use rasbot for in-game integrations, such as:
             </p>
             <ul>
                 <li><a target="_blank" href="https://www.twitch.tv/raspy_on_osu">myself</a></li>
                 <li><a target="_blank" href="https://www.twitch.tv/lifeline">lifeline</a></li>
                 <li><a target="_blank" href="https://www.twitch.tv/umbre">umbre</a></li>
+                <li><a target="_blank" href="https://www.twitch.tv/idke">idke</a></li>
+                <li>... and more</li>
             </ul>
             <br/>
             <p><a target="_blank" href="https://discord.gg/qpyT4zx">rasbot official discord</a></p>
@@ -100,6 +102,14 @@
             </p>
             <br/>
             <p><a target="_blank" href="https://discord.gg/caQKCWFMrN">uncletopia official discord</a></p>
+
+            <div class="small-vertical-divider"></div>
+
+            <h3><a target="_blank" href="https://github.com/jack-avery/fmcs-server">fmcs-server</a></h3>
+
+            <p>
+            <strong>fmcs-server</strong> is a set of Ansible playbooks to administrate <strong>Forge modded Minecraft Servers</strong>.
+            </p>
 
             <div class="small-vertical-divider"></div>
 
