--- a/roles/front/files/tf2/index.html
+++ b/roles/front/files/tf2/index.html
@@ -75,7 +75,7 @@
             <a target="_blank" href="https://github.com/jack-avery/rinstagib-server/tree/prod">ansible playbooks</a>.
             </p>
 
-            <h1>WELCOME TO RAS INSTAGIB.</h1>
+            <h1>WELCOME TO rINSTAGIB.</h1>
 
             <p>
             YOUR <strong>ROCKET LAUNCHER</strong> ONLY DEALS DAMAGE ON <strong>DIRECT HITS</strong>.<br/>
