hide tf2 servers button

--- a/roles/front/files/index.html
+++ b/roles/front/files/index.html
@@ -29,7 +29,7 @@
             <div class="navbar">
                 <button class="navtab" onclick="tab('about')" id="aboutnav">about</button>
                 <button class="navtab" onclick="tab('projects')" id="projectsnav">projects</button>
-                <button class="navtab" onclick="window.location.href='/tf2'" id="tf2nav">tf2 servers</button>
+                <!-- <button class="navtab" onclick="window.location.href='/tf2'" id="tf2nav">tf2 servers</button> -->
             </div>
         </header>
 
