unhide tf2 tab, remove utdemofinder

--- a/roles/front/files/index.html
+++ b/roles/front/files/index.html
@@ -29,7 +29,7 @@
             <div class="navbar">
                 <button class="navtab" onclick="tab('about')" id="aboutnav">about</button>
                 <button class="navtab" onclick="tab('projects')" id="projectsnav">projects</button>
-                <!-- <button class="navtab" onclick="window.location.href='/tf2'" id="tf2nav">tf2 servers</button> -->
+                <button class="navtab" onclick="window.location.href='/tf2'" id="tf2nav">tf2 servers</button>
             </div>
         </header>
 
@@ -95,7 +95,7 @@
 
             <p>
             <strong>uncletopia</strong> is one of the largest <strong>server networks</strong> for <strong>Team Fortress 2</strong>, providing an improved vanilla experience safe from cheaters.<br/>
-            currently, i am a community moderator, as well as aiding the lead developer in maintaining the servers'
+            i have made contributions towards maintaining the servers'
             <a target="_blank" href="https://github.com/leighmacdonald/uncletopia/">ansible playbooks</a>
             and
             <a target="_blank" href="https://github.com/leighmacdonald/uncletopia/tree/master/roles/sourcemod/files/addons/sourcemod/scripting">sourcemod plugins</a>.
@@ -118,15 +118,6 @@
             <p>
             <strong>r2loctool</strong> is a localization tool for <strong>Risk of Rain 2</strong> to replace the pickup tooltips with the more informative entries from the logbook,
             <strong>no mod loader (e.g. r2modman) required</strong>.
-            </p>
-
-            <div class="small-vertical-divider"></div>
-
-            <h3><a target="_blank" href="https://github.com/jack-avery/utdemofinder">utdemofinder</a></h3>
-
-            <p>
-            <strong>utdemofinder</strong> is a utility tool for <strong>uncletopia</strong> moderators to provide a simple user interface for moderators
-            to search for SourceTV demos for specific users, including games played with other users.
             </p>
 
             <div class="small-vertical-divider"></div>
