fabric, not forge

--- a/roles/front/files/index.html
+++ b/roles/front/files/index.html
@@ -108,7 +108,7 @@
             <h3><a target="_blank" href="https://github.com/jack-avery/fmcs-server">fmcs-server</a></h3>
 
             <p>
-            <strong>fmcs-server</strong> is a set of Ansible playbooks to administrate <strong>Forge modded Minecraft Servers</strong>.
+            <strong>fmcs-server</strong> is a set of Ansible playbooks to administrate <strong>Fabric modded Minecraft Servers</strong>.
             </p>
 
             <div class="small-vertical-divider"></div>
