clarify; use new ansibletf2net term

--- a/roles/front/files/404.html
+++ b/roles/front/files/404.html
@@ -41,7 +41,7 @@
 
         <footer>
             <p id="c">
-                hosted on a <span class="tcolors">raspberry pi 400</span><br/>
+                website hosted on a <span class="tcolors">raspberry pi 400</span><br/>
                 <a target="_blank" href="https://github.com/jack-avery/jackavery-web">website source code</a>
             </p>
         </footer>
