--- a/roles/front/files/index.html
+++ b/roles/front/files/index.html
@@ -75,14 +75,21 @@
 
             <div class="small-vertical-divider"></div>
 
+            <h3><a target="_blank" href="https://github.com/jack-avery/ansible-tf2network">ansible-tf2network</a></h3>
+
+            <p>
+            <strong>ansible-tf2network</strong> is a set of <strong>Ansible playbooks</strong> for managing a small <strong>Team Fortress 2</strong> server network.<br/>
+            see the <strong>tf2 servers</strong> tab to see a list of servers i administrate using these playbooks.
+            </p>
+
+            <div class="small-vertical-divider"></div>
+
             <h3><a target="_blank" href="https://github.com/jack-avery/rinstagib">rInstagib</a></h3>
 
             <iframe type="text/html" width="400" height="225" allow="fullscreen" src="https://www.youtube.com/embed/_DH_TAh-4yY"></iframe>
 
             <p>
             <strong>rInstagib</strong> is a <strong>custom gamemode</strong> for <strong>Team Fortress 2</strong>, emulating high-octane gameplay from <strong>Quake</strong>.<br/>
-            currently, i am administrating a small network of servers running this gamemode using
-            <a target="_blank" href="https://github.com/jack-avery/rinstagib-server/tree/prod">ansible playbooks</a>.
             </p>
             <br/>
             <p><a target="_blank" href="https://discord.gg/V5Z29SXtsY">rInstagib official discord</a></p>
@@ -135,7 +142,7 @@
 
         <footer>
             <p id="c">
-                hosted on a <span class="tcolors">raspberry pi 400</span><br/>
+                website hosted on a <span class="tcolors">raspberry pi 400</span><br/>
                 <a target="_blank" href="https://github.com/jack-avery/jackavery-web">website source code</a>
             </p>
         </footer>
