--- a/roles/front/files/tf2/index.html
+++ b/roles/front/files/tf2/index.html
@@ -16,7 +16,7 @@
             <h1 class="pagetitle">tf2 servers</h1>
 
             <div class="iconbar">
-                <a target="_blank" href="https://github.com/jack-avery/rinstagib-server">
+                <a target="_blank" href="https://github.com/jack-avery/ansible-tf2network/">
                     <svg class="icon" viewBox="0 0 24 24">
                         <path d="M12 1.27a11 11 0 00-3.48 21.46c.55.09.73-.28.73-.55v-1.84c-3.03.64-3.67-1.46-3.67-1.46-.55-1.29-1.28-1.65-1.28-1.65-.92-.65.1-.65.1-.65 1.1 0 1.73 1.1 1.73 1.1.92 1.65 2.57 1.2 3.21.92a2 2 0 01.64-1.47c-2.47-.27-5.04-1.19-5.04-5.5 0-1.1.46-2.1 1.2-2.84a3.76 3.76 0 010-2.93s.91-.28 3.11 1.1c1.8-.49 3.7-.49 5.5 0 2.1-1.38 3.02-1.1 3.02-1.1a3.76 3.76 0 010 2.93c.83.74 1.2 1.74 1.2 2.94 0 4.21-2.57 5.13-5.04 5.4.45.37.82.92.82 2.02v3.03c0 .27.1.64.73.55A11 11 0 0012 1.27"></path>
                     </svg>
@@ -26,69 +26,45 @@
                         <path d="M1 11h4v11H1zm15-7.75C16.65 2.49 17.66 2 18.7 2 20.55 2 22 3.45 22 5.3c0 2.27-2.91 4.9-6 7.7-3.09-2.81-6-5.44-6-7.7C10 3.45 11.45 2 13.3 2c1.04 0 2.05.49 2.7 1.25zM20 17h-7l-2.09-.73.33-.94L13 16h2.82c.65 0 1.18-.53 1.18-1.18 0-.49-.31-.93-.77-1.11L8.97 11H7v9.02L14 22l8.01-3c-.01-1.1-.9-2-2.01-2z"></path>
                     </svg>
                 </a>
-                <a target="_blank" href="https://discord.gg/V5Z29SXtsY">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 127.14 96.36">
-                        <g id="图层_2" data-name="图层 2"><g id="Discord_Logos" data-name="Discord Logos"><g id="Discord_Logo_-_Large_-_White" data-name="Discord Logo - Large - White"><path class="cls-1" d="M107.7,8.07A105.15,105.15,0,0,0,81.47,0a72.06,72.06,0,0,0-3.36,6.83A97.68,97.68,0,0,0,49,6.83,72.37,72.37,0,0,0,45.64,0,105.89,105.89,0,0,0,19.39,8.09C2.79,32.65-1.71,56.6.54,80.21h0A105.73,105.73,0,0,0,32.71,96.36,77.7,77.7,0,0,0,39.6,85.25a68.42,68.42,0,0,1-10.85-5.18c.91-.66,1.8-1.34,2.66-2a75.57,75.57,0,0,0,64.32,0c.87.71,1.76,1.39,2.66,2a68.68,68.68,0,0,1-10.87,5.19,77,77,0,0,0,6.89,11.1A105.25,105.25,0,0,0,126.6,80.22h0C129.24,52.84,122.09,29.11,107.7,8.07ZM42.45,65.69C36.18,65.69,31,60,31,53s5-12.74,11.43-12.74S54,46,53.89,53,48.84,65.69,42.45,65.69Zm42.24,0C78.41,65.69,73.25,60,73.25,53s5-12.74,11.44-12.74S96.23,46,96.12,53,91.08,65.69,84.69,65.69Z"/></g></g></g>
-                    </svg>
-                </a>
             </div>
             <div class="navbar">
                 <button class="navtab" onclick="window.location.href='/index.html'" id="backnav">back</button>
                 <button class="navtab" onclick="tab('about')" id="aboutnav">about</button>
-                <button class="navtab" onclick="tab('servers')" id="serversnav">servers</button>
-                <button class="navtab" onclick="tab('rinstagib')" id="rinstagibnav">rinstagib?</button>
-                <button class="navtab" onclick="window.location.href='/bans/'" id="sbnav">sourcebans</button>
+                <button class="navtab" onclick="tab('boxes4foxes')" id="boxes4foxesnav">boxes4foxes</button>
+                <button class="navtab" onclick="tab('respawnroom')" id="respawnroomnav">respawnroom</button>
             </div>
         </header>
 
         <div class="vertical-divider"></div>
 
         <div id="abouttab" class="tab">
-            <h1>rules</h1>
-
-            <ul>
-                <li>do not be a bigot.</li>
-                <li>do not be toxic.</li>
-                <li>do not abuse exploits or cheat.</li>
-                <li>do not think you can skirt around the rules.</li>
-            </ul>
-
             <p>
-            <a target="_blank" href="https://discord.gg/V5Z29SXtsY">our discord server</a><br/>
-            <a target="_blank" href="https://github.com/jack-avery/rinstagib-server/tree/prod">server source code</a>
+            i currently administrate two different server groups for Team Fortress 2 using my <a target="_blank" href="https://github.com/jack-avery/ansible-tf2network/">custom Ansible playbooks</a>.
             </p>
         </div>
 
-        <div id="serverstab" class="tab">
-            <table id="serverlistcontainer">
-            </table>
+        <div id="boxes4foxestab" class="tab">
+            <h3><a target="_blank" href="https://www.boxesforfoxes.net/">Boxes 4 Foxes</a></h3>
+
+            <p>
+            <strong>Boxes 4 Foxes</strong> is a network with servers running improved versions of the popular maps <strong>hightower</strong>, <strong>2fort</strong>, and <strong>turbine</strong>,
+            a hang-out server where players can chat and explore fun custom maps, as well as my custom gamemode <strong>rinstagib</strong>.<br/><br/>
+
+            <a target="_blank" href="https://steamcommunity.com/groups/BoxesForFoxes">steam group</a><br/>
+            <a target="_blank" href="https://discord.gg/6rTTw8gUER">discord server</a><br/>
+            <a target="_blank" href="https://boxes4foxes.site.nfoservers.com/sourcebans/">sourcebans</a><br/>
+            </p>
         </div>
 
-        <div id="rinstagibtab" class="tab">
-            <h3><a target="_blank" href="https://github.com/jack-avery/rinstagib">rInstagib</a></h3>
-
-            <iframe class="large" type="text/html" width="800" height="450" allow="fullscreen" src="https://www.youtube.com/embed/_DH_TAh-4yY"></iframe>
+        <div id="respawnroomtab" class="tab">
+            <h3><a target="_blank" href="https://github.com/jack-avery/ansible-tf2network/tree/rr">The Respawn Room</a></h3>
 
             <p>
-            <strong>rInstagib</strong> is a <strong>custom gamemode</strong> for <strong>Team Fortress 2</strong>, emulating high-octane gameplay from <strong>Quake</strong>.<br/>
-            currently, i am administrating a <a href="#servers">small network of servers</a> running this gamemode using
-            <a target="_blank" href="https://github.com/jack-avery/rinstagib-server/tree/prod">ansible playbooks</a>.
-            </p>
+            <strong>The Respawn Room</strong> is a small community server hosting seasonal map rotations.<br/><br/>
 
-            <h1>WELCOME TO rINSTAGIB.</h1>
-
-            <p>
-            YOUR <strong>ROCKET LAUNCHER</strong> ONLY DEALS DAMAGE ON <strong>DIRECT HITS</strong>.<br/>
-            YOUR <strong>AIRSHOTS</strong> WILL <strong>ONE-HIT KILL</strong>.<br/>
-            <br/>
-            YOUR <strong>SECONDARY</strong> IS REPLACED WITH A <strong>RAILGUN</strong>.<br/>
-            <strong>MOMENTUM</strong> IS <strong>KEY</strong>. DEAL MORE DAMAGE THE <strong>FASTER</strong> YOU MOVE.<br/>
-            <br/>
-            YOUR <strong>MELEE HITS</strong> WILL <strong>ONE-HIT KILL</strong>.<br/>
-            <br/>
-            YOUR <strong>BUNNYHOPPING</strong> IS <strong>AUTOMATIC</strong>.<br/>
-            YOUR <strong>AIR CONTROL</strong> IS <strong>STRONGER</strong>.<br/>
-            YOUR <strong>AMMUNITION</strong> IS <strong>INFINITE</strong>.<br/>
+            <a target="_blank" href="https://steamcommunity.com/groups/therespawnroom">steam group</a><br/>
+            <a target="_blank" href="https://discord.gg/ZYMGup4rSp">discord server</a><br/>
+            <a target="_blank" href="https://jackavery.ca/bans">sourcebans</a><br/>
             </p>
         </div>
 
@@ -96,7 +72,7 @@
 
         <footer>
             <p id="c">
-                hosted on a <span class="tcolors">raspberry pi 400</span><br/>
+                website hosted on a <span class="tcolors">raspberry pi 400</span><br/>
                 <a target="_blank" href="https://github.com/jack-avery/jackavery-web">website source code</a>
             </p>
         </footer>
