--- a/roles/front/files/index.html
+++ b/roles/front/files/index.html
@@ -82,6 +82,12 @@
             see the <strong>tf2 servers</strong> tab to see a list of servers i administrate using these playbooks.
             </p>
 
+            <h3><a target="_blank" href="https://github.com/jack-avery/srpk">srpk</a></h3>
+
+            <p>
+            <strong>srpk</strong> is a CLI <strong>password manager</strong> made in <strong>Rust</strong>.<br/>
+            </p>
+
             <div class="small-vertical-divider"></div>
 
             <h3><a target="_blank" href="https://github.com/jack-avery/rinstagib">rInstagib</a></h3>
