--- a/roles/front/files/index.html
+++ b/roles/front/files/index.html
@@ -82,6 +82,8 @@
             see the <strong>tf2 servers</strong> tab to see a list of servers i administrate using these playbooks.
             </p>
 
+            <div class="small-vertical-divider"></div>
+
             <h3><a target="_blank" href="https://github.com/jack-avery/srpk">srpk</a></h3>
 
             <p>
