--- a/roles/front/files/404.html
+++ b/roles/front/files/404.html
@@ -19,7 +19,7 @@
             </div>
         </header>
 
-        <div class="vertical-divider"></div>
+        <div class="header-divider"></div>
 
         <div id="abouttab" class="tab">
             <p>
@@ -41,7 +41,6 @@
 
         <footer>
             <p id="c">
-                website hosted on a <span class="tcolors">raspberry pi 400</span><br/>
                 <a target="_blank" href="https://github.com/jack-avery/jackavery-web">website source code</a>
             </p>
         </footer>
