--- a/roles/front/files/tf2/index.html
+++ b/roles/front/files/tf2/index.html
@@ -31,15 +31,14 @@
                 <button class="navtab" onclick="window.location.href='/index.html'" id="backnav">back</button>
                 <button class="navtab" onclick="tab('about')" id="aboutnav">about</button>
                 <button class="navtab" onclick="tab('boxes4foxes')" id="boxes4foxesnav">boxes4foxes</button>
-                <button class="navtab" onclick="tab('respawnroom')" id="respawnroomnav">respawnroom</button>
             </div>
         </header>
 
-        <div class="vertical-divider"></div>
+        <div class="header-divider"></div>
 
         <div id="abouttab" class="tab">
             <p>
-            i currently administrate two different server groups for Team Fortress 2 using my <a target="_blank" href="https://github.com/jack-avery/ansible-tf2network/">custom Ansible playbooks</a>.
+            i currently administrate one server group for Team Fortress 2 using my <a target="_blank" href="https://github.com/jack-avery/ansible-tf2network/">custom Ansible playbooks</a>.
             </p>
         </div>
 
@@ -56,23 +55,10 @@
             </p>
         </div>
 
-        <div id="respawnroomtab" class="tab">
-            <h3><a target="_blank" href="https://github.com/jack-avery/ansible-tf2network/tree/rr">The Respawn Room</a></h3>
-
-            <p>
-            <strong>The Respawn Room</strong> is a small community server hosting seasonal map rotations.<br/><br/>
-
-            <a target="_blank" href="https://steamcommunity.com/groups/therespawnroom">steam group</a><br/>
-            <a target="_blank" href="https://discord.gg/ZYMGup4rSp">discord server</a><br/>
-            <a target="_blank" href="https://jackavery.ca/bans">sourcebans</a><br/>
-            </p>
-        </div>
-
         <div class="vertical-divider"></div>
 
         <footer>
             <p id="c">
-                website hosted on a <span class="tcolors">raspberry pi 400</span><br/>
                 <a target="_blank" href="https://github.com/jack-avery/jackavery-web">website source code</a>
             </p>
         </footer>
