--- a/roles/front/files/index.html
+++ b/roles/front/files/index.html
@@ -33,7 +33,7 @@
             </div>
         </header>
 
-        <div class="vertical-divider"></div>
+        <div class="header-divider"></div>
 
         <div id="abouttab" class="tab">
             <p>my name is jack <span class="tcolors">"raspy"</span> avery and i'm an avid python developer with additional experience in:</p>
@@ -56,18 +56,16 @@
         <div id="projectstab" class="tab">
             <h3><a target="_blank" href="https://github.com/jack-avery/rasbot">rasbot</a></h3>
 
-            <img src="media/img/projects/rasbot.png" />
-
             <p>
-            <strong>rasbot</strong> is an <strong>open-source</strong>, <strong>self-hosted</strong> twitch bot alternative made in <strong>python</strong> with a modular design,
-            allowing users to extend the base design with their own plugins using manifests for automatic dependency installation and updates.<br/>
-            currently, some <strong>osu!</strong> twitch streamers use rasbot for in-game integrations, such as:
+            <strong>rasbot</strong> is a <strong>self-hosted</strong> twitch bot alternative made in <strong>Python</strong> with a sophisticated
+            system for easily creating and managing user-created "plugins", with automatic updates and dependency resolution.<br/>
+            some <strong>osu!</strong> twitch streamers who currently or previously used rasbot for in-game integrations:
             </p>
             <ul>
-                <li><a target="_blank" href="https://www.twitch.tv/raspy_on_osu">myself</a></li>
-                <li><a target="_blank" href="https://www.twitch.tv/lifeline">lifeline</a></li>
-                <li><a target="_blank" href="https://www.twitch.tv/umbre">umbre</a></li>
-                <li><a target="_blank" href="https://www.twitch.tv/idke">idke</a></li>
+                <li>- <a target="_blank" href="https://www.twitch.tv/raspy_on_osu">myself</a></li>
+                <li>- <a target="_blank" href="https://www.twitch.tv/lifeline">lifeline</a></li>
+                <li>- <a target="_blank" href="https://www.twitch.tv/umbre">umbre</a></li>
+                <li>- <a target="_blank" href="https://www.twitch.tv/idke">idke</a></li>
                 <li>... and more</li>
             </ul>
             <br/>
@@ -78,7 +76,7 @@
             <h3><a target="_blank" href="https://github.com/jack-avery/ansible-tf2network">ansible-tf2network</a></h3>
 
             <p>
-            <strong>ansible-tf2network</strong> is a set of <strong>Ansible playbooks</strong> for managing a small <strong>Team Fortress 2</strong> server network.<br/>
+            <strong>ansible-tf2network</strong> is a set of <strong>Ansible playbooks</strong> for managing a small to medium-sized <strong>Team Fortress 2</strong> server network.<br/>
             see the <strong>tf2 servers</strong> tab to see a list of servers i administrate using these playbooks.
             </p>
 
@@ -87,43 +85,35 @@
             <h3><a target="_blank" href="https://github.com/jack-avery/srpk">srpk</a></h3>
 
             <p>
-            <strong>srpk</strong> is a CLI <strong>password manager</strong> made in <strong>Rust</strong>.<br/>
+            <strong>srpk</strong> is a CLI <strong>password manager</strong> made in <strong>Rust</strong> using AES256 and supporting bcrypt cost customization.<br/>
             </p>
 
             <div class="small-vertical-divider"></div>
 
             <h3><a target="_blank" href="https://github.com/jack-avery/rinstagib">rInstagib</a></h3>
 
-            <iframe type="text/html" width="400" height="225" allow="fullscreen" src="https://www.youtube.com/embed/_DH_TAh-4yY"></iframe>
-
             <p>
-            <strong>rInstagib</strong> is a <strong>custom gamemode</strong> for <strong>Team Fortress 2</strong>, emulating high-octane gameplay from <strong>Quake</strong>.<br/>
+            <strong>rInstagib</strong> is a <strong>custom gamemode</strong> for <strong>Team Fortress 2</strong>.<br/>
             </p>
-            <br/>
-            <p><a target="_blank" href="https://discord.gg/V5Z29SXtsY">rInstagib official discord</a></p>
 
             <div class="small-vertical-divider"></div>
 
             <h3><a target="_blank" href="https://uncletopia.com/">uncletopia</a></h3>
 
-            <img src="media/img/projects/uncletopia.png" />
-
             <p>
-            <strong>uncletopia</strong> is one of the largest <strong>server networks</strong> for <strong>Team Fortress 2</strong>, providing an improved vanilla experience safe from cheaters.<br/>
+            <strong>uncletopia</strong> is one of the largest <strong>server networks</strong> for <strong>Team Fortress 2</strong>.<br/>
             i have made contributions towards maintaining the servers'
             <a target="_blank" href="https://github.com/leighmacdonald/uncletopia/">ansible playbooks</a>
             and
             <a target="_blank" href="https://github.com/leighmacdonald/uncletopia/tree/master/roles/sourcemod/files/addons/sourcemod/scripting">sourcemod plugins</a>.
             </p>
-            <br/>
-            <p><a target="_blank" href="https://discord.gg/caQKCWFMrN">uncletopia official discord</a></p>
 
             <div class="small-vertical-divider"></div>
 
             <h3><a target="_blank" href="https://github.com/jack-avery/fmcs-server">fmcs-server</a></h3>
 
             <p>
-            <strong>fmcs-server</strong> is a set of Ansible playbooks to administrate <strong>Fabric modded Minecraft Servers</strong>.
+            <strong>fmcs-server</strong> is a set of Ansible playbooks to administrate <strong>Fabric or Forge modded Minecraft Servers</strong>.
             </p>
 
             <div class="small-vertical-divider"></div>
@@ -131,18 +121,17 @@
             <h3><a target="_blank" href="https://github.com/jack-avery/r2loctool">r2loctool</a></h3>
 
             <p>
-            <strong>r2loctool</strong> is a localization tool for <strong>Risk of Rain 2</strong> to replace the pickup tooltips with the more informative entries from the logbook,
-            <strong>no mod loader (e.g. r2modman) required</strong>.
+            <strong>r2loctool</strong> is a tool for <strong>Risk of Rain 2</strong> to replace the pickup tooltips with the more informative entries from the logbook.
             </p>
 
             <div class="small-vertical-divider"></div>
 
-            <h3><a target="_blank" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2898451893">noita playable starts</a></h3>
+            <h3><a target="_blank" href="https://github.com/jack-avery/playable-starts">noita playable starts</a></h3>
 
             <p>
             <strong>playable starts</strong>
-            <a target="_blank" href="https://github.com/jack-avery/playable-starts">(github source)</a>
-            is a mod for <strong>noita</strong> that prevents the player from spawning with a majority of "unplayable" loadouts.
+            <a target="_blank" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2898451893">(workshop page)</a>
+            is a mod for <strong>Noita</strong> that prevents the player from spawning with a majority of "unplayable" loadouts.
             </p>
         </div>
 
@@ -150,7 +139,6 @@
 
         <footer>
             <p id="c">
-                website hosted on a <span class="tcolors">raspberry pi 400</span><br/>
                 <a target="_blank" href="https://github.com/jack-avery/jackavery-web">website source code</a>
             </p>
         </footer>
