major rework; remove build

--- a/roles/deploy/files/web/index.html
+++ b/roles/deploy/files/web/index.html
@@ -29,7 +29,7 @@
             <div class="navbar">
                 <button class="navtab" onclick="tab('about')" id="aboutnav">about</button>
                 <button class="navtab" onclick="tab('projects')" id="projectsnav">projects</button>
-                <button class="navtab" onclick="window.location.href='/tf2'" id="tf2nav">tf2 servers</button>
+                <button class="navtab" onclick="tab('tf2')" id="tf2nav">tf2 servers</button>
             </div>
         </header>
 
@@ -121,7 +121,7 @@
             <h3><a target="_blank" href="https://github.com/jack-avery/r2loctool">r2loctool</a></h3>
 
             <p>
-            <strong>r2loctool</strong> is a tool for <strong>Risk of Rain 2</strong> to replace the pickup tooltips with the more informative entries from the logbook.
+            <strong>r2loctool</strong> is a tool for <strong>Risk of Rain 2</strong> to replace the pickup tooltips with the informative entries from the logbook.
             </p>
 
             <div class="small-vertical-divider"></div>
@@ -131,7 +131,26 @@
             <p>
             <strong>playable starts</strong>
             <a target="_blank" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2898451893">(workshop page)</a>
-            is a mod for <strong>Noita</strong> that prevents the player from spawning with a majority of "unplayable" loadouts.
+            is a mod for <strong>Noita</strong> that tweaks the player spawn loadouts to reduce resets.
+            </p>
+        </div>
+
+        <div id="tf2tab" class="tab">
+            <p>
+                i currently administrate one server group for Team Fortress 2 using my <a target="_blank" href="https://github.com/jack-avery/ansible-tf2network/">custom Ansible playbooks</a>.
+            </p>
+
+            <div class="vertical-divider"></div>
+
+            <h3><a target="_blank" href="https://www.boxesforfoxes.net/">Boxes 4 Foxes</a></h3>
+
+            <p>
+                <strong>Boxes 4 Foxes</strong> is a network with servers running improved versions of the popular maps <strong>hightower</strong>, <strong>2fort</strong>, and <strong>turbine</strong>,
+                a hang-out server where players can chat and explore fun custom maps, as well as my custom gamemode <strong>rinstagib</strong>.<br/><br/>
+
+                <a target="_blank" href="https://steamcommunity.com/groups/BoxesForFoxes">steam group</a><br/>
+                <a target="_blank" href="https://discord.gg/6rTTw8gUER">discord server</a><br/>
+                <a target="_blank" href="https://boxes4foxes.site.nfoservers.com/sourcebans/">sourcebans</a><br/>
             </p>
         </div>
 
