open commissions; fix 404 formatting

--- a/roles/deploy/files/web/index.html
+++ b/roles/deploy/files/web/index.html
@@ -29,6 +29,7 @@
             <div class="navbar">
                 <button class="navtab" onclick="tab('about')" id="aboutnav">about</button>
                 <button class="navtab" onclick="tab('projects')" id="projectsnav">projects</button>
+                <button class="navtab" onclick="tab('com')" id="comnav">commissions</button>
                 <button class="navtab" onclick="tab('tf2')" id="tf2nav">tf2 servers</button>
             </div>
         </header>
@@ -135,6 +136,21 @@
             </p>
         </div>
 
+        <div id="comtab" class="tab">
+            <p>
+            i am open for freelance software development work.<br/>
+            <br/>
+            if my experience is of interest to you, feel free to contact me at<br/>
+            <strong><span class="tcolors">jack.avery.business@gmail.com</span></strong><br/>
+            and we may discuss the terms of the contract.<br/>
+            <br/>
+            <strong>
+            please note that your commission or request is subject to the
+            <a target="_blank" href="/legal/SERVICE_AGREEMENT.pdf">service agreement</a>.
+            </strong>
+            </p>
+        </div>
+
         <div id="tf2tab" class="tab">
             <p>
                 i currently administrate one server group for Team Fortress 2 using my <a target="_blank" href="https://github.com/jack-avery/ansible-tf2network/">custom Ansible playbooks</a>.
@@ -159,6 +175,8 @@
         <footer>
             <p id="c">
                 <a target="_blank" href="https://github.com/jack-avery/jackavery-web">website source code</a>
+                <br/>
+                <a target="_blank" href="/legal/PRIVACY.pdf">privacy policy</a>
             </p>
         </footer>
     </body>
