--- a/roles/deploy/files/web/404.html
+++ b/roles/deploy/files/web/404.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="/css/style.css" />
+        <link rel="stylesheet" href="/css/404.css" />
         <script src="/js/404.js"></script>
         <meta charset="utf-8" />
         <link rel="shortcut icon" href="/favicon.ico" />
@@ -22,15 +23,17 @@
         <div class="header-divider"></div>
 
         <div id="abouttab" class="tab">
-            <p>
-            there's nothing here...
-            </p>
+            <div class="content_404">
+                <p>
+                there's nothing here...
+                </p>
 
-            <iframe id="404video" type="text/html" width="400" height="225" allow="fullscreen" src=""></iframe>
+                <iframe id="404video" type="text/html" width="400" height="225" allow="fullscreen" src=""></iframe>
 
-            <p>
-            have a random song.
-            </p>
+                <p>
+                have a random song.
+                </p>
+            </div>
 
             <div class="navbar">
                 <button class="promptbutton" onclick="getNext()" id="prompt">give me another one!</button>
@@ -42,6 +45,8 @@
         <footer>
             <p id="c">
                 <a target="_blank" href="https://github.com/jack-avery/jackavery-web">website source code</a>
+                <br/>
+                <a target="_blank" href="/legal/PRIVACY.pdf">privacy policy</a>
             </p>
         </footer>
     </body>
