make nav more clear

--- a/roles/deploy/files/web/index.html
+++ b/roles/deploy/files/web/index.html
@@ -29,7 +29,7 @@
             <div class="navbar">
                 <button class="navtab" onclick="tab('about')" id="aboutnav">about</button>
                 <button class="navtab" onclick="tab('projects')" id="projectsnav">projects</button>
-                <button class="navtab" onclick="tab('com')" id="comnav">commissions</button>
+                <button class="navtab" onclick="tab('commissions')" id="commissionsnav">commissions</button>
                 <button class="navtab" onclick="tab('tf2')" id="tf2nav">tf2 servers</button>
             </div>
         </header>
@@ -136,7 +136,7 @@
             </p>
         </div>
 
-        <div id="comtab" class="tab">
+        <div id="commissionstab" class="tab">
             <p>
             i am open for freelance software development work.<br/>
             <br/>
