--- a/roles/deploy/files/web/index.html
+++ b/roles/deploy/files/web/index.html
@@ -149,6 +149,52 @@
             <a target="_blank" href="/legal/SERVICE_AGREEMENT.pdf">service agreement</a>.
             </strong>
             </p>
+            <br/>
+            <br/>
+
+            <h2>faq</h2><br/>
+            <p>
+            <strong>1. if i'm paying you, why are you trying to release it under an open source license?</strong><br/>
+            i advocate free and open open source software.<br/>
+            when you pay me to create an application and i release it under GPL,
+            i am allowing anyone with a mutual interest in the application you've asked me to create to use it.
+            this makes these technologies more accessible for other people,
+            and allows anyone to suggest changes to improve your application for free. including myself, if i see fit.
+            having it public and open-source also means i get to show off my work with pride.<br/>
+            also worth noting i am happy to oblige if you want it to remain closed source, but this may make me less excited to work on it.<br/>
+            <br/>
+
+            <strong>2. what can you actually do?</strong><br/>
+            anything that involves technologies that i've used inside of my projects tab. i am also more than happy to learn
+            new technologies required to complete your application, but understand that that means it will take longer to finish
+            the contract. naturally, if a request includes a lot of technologies i'm unfamiliar with, i will make that clear to you
+            during the discussion of our service agreement, and i'll try to come to a mutual agreement on fair pay.<br/>
+            <br/>
+
+            <strong>3. what are some things you've already done under contract?</strong><br/>
+            note that this list is not exhaustive as i have been asked to keep some confidential.<br/>
+            1. <a target="_blank" href="https://github.com/jack-avery/gpbl-bot">gpbl-bot</a>, a 24/7 music playing discord bot for a rap community<br/>
+            2. <a target="_blank" href="https://github.com/jack-avery/ansible-tf2network/tree/bff">boxes4foxes</a>, a team fortress 2 community server network<br/>
+            <br/>
+
+            <strong>4. my idea is a bit fuzzy or unfinished. can you work with that?</strong><br/>
+            yes, but it will make discussion a bit longer. the service agreement makes clear the terms about <strong>Scope</strong>.<br/>
+            i will discuss with you and we will come to an agreement about what exactly your application should do,
+            and any modifications to that "Scope" will need to be agreed to.
+            this prevents any surprise changes to what you've asked me to create.<br/>
+            <br/>
+
+            <strong>5. how does payment work? it's not exactly specified in the agreement above.</strong><br/>
+            the exact method of payment will be discussed alongside the terms of our agreement and scope of project.<br/>
+            in most cases, i will send you invoices to you over PayPal, and the frequency of these invoices will be made clear to you.
+            if you aren't able to use PayPal, we will need to discuss another form of payment.<br/>
+            <br/>
+
+            <strong>6. can you do x for FREE?</strong><br/>
+            if i'm not being paid, the application being open-source is non-negotiable, and the idea you have
+            better interest me enough or expose me to new technologies to make my time enjoyable and/or educational.
+            in no way do i guarantee anyone will get anything for free, but shoot your shot anyways, and we'll talk!
+            </p>
         </div>
 
         <div id="tf2tab" class="tab">
