--- a/roles/deploy/files/web/index.html
+++ b/roles/deploy/files/web/index.html
@@ -138,7 +138,7 @@
 
         <div id="commissionstab" class="tab">
             <p>
-            i am open for freelance software development work.<br/>
+            i am open for freelance software development work ("commissions").<br/>
             <br/>
             if my experience is of interest to you, feel free to contact me at<br/>
             <strong><span class="tcolors">jack.avery.business@gmail.com</span></strong><br/>
@@ -155,7 +155,7 @@
             <h2>faq</h2><br/>
             <p>
             <strong>1. if i'm paying you, why are you trying to release it under an open source license?</strong><br/>
-            i advocate free and open open source software.<br/>
+            i advocate free and open source software.<br/>
             when you pay me to create an application and i release it under GPL,
             i am allowing anyone with a mutual interest in the application you've asked me to create to use it.
             this makes these technologies more accessible for other people,
