--- a/roles/deploy/files/web/index.html
+++ b/roles/deploy/files/web/index.html
@@ -175,6 +175,7 @@
             note that this list is not exhaustive as i have been asked to keep some confidential.<br/>
             1. <a target="_blank" href="https://github.com/jack-avery/gpbl-bot">gpbl-bot</a>, a 24/7 music playing discord bot for a rap community<br/>
             2. <a target="_blank" href="https://github.com/jack-avery/ansible-tf2network/tree/bff">boxes4foxes</a>, a team fortress 2 community server network<br/>
+            3. <a target="_blank" href="https://github.com/jack-avery/ansible-tf2network/tree/swishcast">another</a> tf2 server for the podcast 'SwishCast'<br/>
             <br/>
 
             <strong>4. my idea is a bit fuzzy or unfinished. can you work with that?</strong><br/>
@@ -186,7 +187,7 @@
 
             <strong>5. how does payment work? it's not exactly specified in the agreement above.</strong><br/>
             the exact method of payment will be discussed alongside the terms of our agreement and scope of project.<br/>
-            in most cases, i will send you invoices to you over PayPal, and the frequency of these invoices will be made clear to you.
+            in most cases, i will send invoices to you over PayPal, and the frequency of these invoices will be made clear to you.
             if you aren't able to use PayPal, we will need to discuss another form of payment.<br/>
             <br/>
 
@@ -199,7 +200,7 @@
 
         <div id="tf2tab" class="tab">
             <p>
-                i currently administrate one server group for Team Fortress 2 using my <a target="_blank" href="https://github.com/jack-avery/ansible-tf2network/">custom Ansible playbooks</a>.
+                i currently administrate two server groups for Team Fortress 2 using my <a target="_blank" href="https://github.com/jack-avery/ansible-tf2network/">custom Ansible playbooks</a>.
             </p>
 
             <div class="vertical-divider"></div>
@@ -213,6 +214,17 @@
                 <a target="_blank" href="https://steamcommunity.com/groups/BoxesForFoxes">steam group</a><br/>
                 <a target="_blank" href="https://discord.gg/6rTTw8gUER">discord server</a><br/>
                 <a target="_blank" href="https://boxes4foxes.site.nfoservers.com/sourcebans/">sourcebans</a><br/>
+            </p>
+
+            <div class="vertical-divider"></div>
+
+            <h3>SwishCast Central</h3>
+
+            <p>
+                <strong>SwishCast Central</strong> is a server for the Team Fortress 2 podcast <strong>the SwishCast</strong> meant to provide an improved casual experience.<br/><br/>
+
+                <a target="_blank" href="https://www.youtube.com/@MANN_Magazine">youtube channel</a><br/>
+                <a target="_blank" href="https://discord.gg/CykAHkzkhx">discord server</a><br/>
             </p>
         </div>
 
