--- a/roles/deploy/files/web/index.html
+++ b/roles/deploy/files/web/index.html
@@ -39,16 +39,16 @@
         <div id="abouttab" class="tab">
             <p>my name is jack <span class="tcolors">"raspy"</span> avery and i'm an avid python developer with additional experience in:</p>
             
-            <br/>
+            <br>
             <ul>
                 <li>cybersecurity and penetration testing with TRAs</li>
                 <li>full-stack web development using react/materialui 5, django, and RDBMS (postgreSQL/mySQL)</li>
                 <li>CI/CD cloud deployment with AWS using ansible and docker</li>
             </ul>
-            <br/>
+            <br>
 
             <p>
-            my projects are visible under the <a href="#projects">projects</a> tab.<br/>
+            my projects are visible under the <a href="#projects">projects</a> tab.<br>
             i like to contribute to open-source projects.
             i plan to continue creating fun and/or helpful open-source applications for people to use or experiment with.
             </p>
@@ -59,7 +59,7 @@
 
             <p>
             <strong>rasbot</strong> is a <strong>self-hosted</strong> twitch bot alternative made in <strong>Python</strong> with a sophisticated
-            system for easily creating and managing user-created "plugins", with automatic updates and dependency resolution.<br/>
+            system for easily creating and managing user-created "plugins", with automatic updates and dependency resolution.<br>
             some <strong>osu!</strong> twitch streamers who currently or previously used rasbot for in-game integrations:
             </p>
             <ul>
@@ -69,7 +69,7 @@
                 <li>- <a target="_blank" href="https://www.twitch.tv/idke">idke</a></li>
                 <li>... and more</li>
             </ul>
-            <br/>
+            <br>
             <p><a target="_blank" href="https://discord.gg/qpyT4zx">rasbot official discord</a></p>
 
             <div class="small-vertical-divider"></div>
@@ -77,7 +77,7 @@
             <h3><a target="_blank" href="https://github.com/jack-avery/ansible-tf2network">ansible-tf2network</a></h3>
 
             <p>
-            <strong>ansible-tf2network</strong> is a set of <strong>Ansible playbooks</strong> for managing a small to medium-sized <strong>Team Fortress 2</strong> server network.<br/>
+            <strong>ansible-tf2network</strong> is a set of <strong>Ansible playbooks</strong> for managing a small to medium-sized <strong>Team Fortress 2</strong> server network.<br>
             see the <strong>tf2 servers</strong> tab to see a list of servers i administrate using these playbooks.
             </p>
 
@@ -86,7 +86,7 @@
             <h3><a target="_blank" href="https://github.com/jack-avery/srpk">srpk</a></h3>
 
             <p>
-            <strong>srpk</strong> is a CLI <strong>password manager</strong> made in <strong>Rust</strong> using AES256 and supporting bcrypt cost customization.<br/>
+            <strong>srpk</strong> is a CLI <strong>password manager</strong> made in <strong>Rust</strong> using AES256 and supporting bcrypt cost customization.<br>
             </p>
 
             <div class="small-vertical-divider"></div>
@@ -94,7 +94,7 @@
             <h3><a target="_blank" href="https://github.com/jack-avery/rinstagib">rInstagib</a></h3>
 
             <p>
-            <strong>rInstagib</strong> is a <strong>custom gamemode</strong> for <strong>Team Fortress 2</strong>.<br/>
+            <strong>rInstagib</strong> is a <strong>custom gamemode</strong> for <strong>Team Fortress 2</strong>.<br>
             </p>
 
             <div class="small-vertical-divider"></div>
@@ -102,7 +102,7 @@
             <h3><a target="_blank" href="https://uncletopia.com/">uncletopia</a></h3>
 
             <p>
-            <strong>uncletopia</strong> is one of the largest <strong>server networks</strong> for <strong>Team Fortress 2</strong>.<br/>
+            <strong>uncletopia</strong> is one of the largest <strong>server networks</strong> for <strong>Team Fortress 2</strong>.<br>
             i have made contributions towards maintaining the servers'
             <a target="_blank" href="https://github.com/leighmacdonald/uncletopia/">ansible playbooks</a>
             and
@@ -138,60 +138,60 @@
 
         <div id="commissionstab" class="tab">
             <p>
-            i am open for freelance software development work ("commissions").<br/>
-            <br/>
-            if my experience is of interest to you, feel free to contact me at<br/>
-            <strong><span class="tcolors">jack.avery.business@gmail.com</span></strong><br/>
-            and we may discuss the terms of the contract.<br/>
-            <br/>
+            i am open for freelance software development work ("commissions").<br>
+            <br>
+            if my experience is of interest to you, feel free to contact me at<br>
+            <strong><span class="tcolors">jack.avery.business@gmail.com</span></strong><br>
+            and we may discuss the terms of the contract.<br>
+            <br>
             <strong>
             please note that your commission or request is subject to the
             <a target="_blank" href="/legal/SERVICE_AGREEMENT.pdf">service agreement</a>.
             </strong>
             </p>
-            <br/>
-            <br/>
+            <br>
+            <br>
 
-            <h2>faq</h2><br/>
+            <h2>faq</h2><br>
             <p>
-            <strong>1. if i'm paying you, why are you trying to release it under an open source license?</strong><br/>
-            i advocate free and open source software.<br/>
+            <strong>1. if i'm paying you, why are you trying to release it under an open source license?</strong><br>
+            i advocate free and open source software.<br>
             when you pay me to create an application and i release it under GPL,
             i am allowing anyone with a mutual interest in the application you've asked me to create to use it.
             this makes these technologies more accessible for other people,
             and allows anyone to suggest changes to improve your application for free. including myself, if i see fit.
-            having it public and open-source also means i get to show off my work with pride.<br/>
-            also worth noting i am happy to oblige if you want it to remain closed source, but this may make me less excited to work on it.<br/>
-            <br/>
+            having it public and open-source also means i get to show off my work with pride.<br>
+            also worth noting i am happy to oblige if you want it to remain closed source, but this may make me less excited to work on it.<br>
+            <br>
 
-            <strong>2. what can you actually do?</strong><br/>
+            <strong>2. what can you actually do?</strong><br>
             anything that involves technologies that i've used inside of my projects tab. i am also more than happy to learn
             new technologies required to complete your application, but understand that that means it will take longer to finish
             the contract. naturally, if a request includes a lot of technologies i'm unfamiliar with, i will make that clear to you
-            during the discussion of our service agreement, and i'll try to come to a mutual agreement on fair pay.<br/>
-            <br/>
+            during the discussion of our service agreement, and i'll try to come to a mutual agreement on fair pay.<br>
+            <br>
 
-            <strong>3. what are some things you've already done under contract?</strong><br/>
-            note that this list is not exhaustive as i have been asked to keep some confidential.<br/>
-            1. <a target="_blank" href="https://github.com/jack-avery/gpbl-bot">gpbl-bot</a>, a 24/7 music playing discord bot for a rap community<br/>
-            2. <a target="_blank" href="https://github.com/jack-avery/ansible-tf2network/tree/bff">boxes4foxes</a>, a team fortress 2 community server network<br/>
-            3. <a target="_blank" href="https://github.com/jack-avery/ansible-tf2network/tree/swishcast">another</a> tf2 server for the podcast 'SwishCast'<br/>
-            <br/>
+            <strong>3. what are some things you've already done under contract?</strong><br>
+            note that this list is not exhaustive as i have been asked to keep some confidential.<br>
+            1. <a target="_blank" href="https://github.com/jack-avery/gpbl-bot">gpbl-bot</a>, a 24/7 music playing discord bot for a rap community<br>
+            2. <a target="_blank" href="https://github.com/jack-avery/ansible-tf2network/tree/bff">boxes4foxes</a>, a team fortress 2 community server network<br>
+            3. <a target="_blank" href="https://github.com/jack-avery/ansible-tf2network/tree/swishcast">another</a> tf2 server for the podcast 'SwishCast'<br>
+            <br>
 
-            <strong>4. my idea is a bit fuzzy or unfinished. can you work with that?</strong><br/>
-            yes, but it will make discussion a bit longer. the service agreement makes clear the terms about <strong>Scope</strong>.<br/>
+            <strong>4. my idea is a bit fuzzy or unfinished. can you work with that?</strong><br>
+            yes, but it will make discussion a bit longer. the service agreement makes clear the terms about <strong>Scope</strong>.<br>
             i will discuss with you and we will come to an agreement about what exactly your application should do,
             and any modifications to that "Scope" will need to be agreed to.
-            this prevents any surprise changes to what you've asked me to create.<br/>
-            <br/>
+            this prevents any surprise changes to what you've asked me to create.<br>
+            <br>
 
-            <strong>5. how does payment work? it's not exactly specified in the agreement above.</strong><br/>
-            the exact method of payment will be discussed alongside the terms of our agreement and scope of project.<br/>
+            <strong>5. how does payment work? it's not exactly specified in the agreement above.</strong><br>
+            the exact method of payment will be discussed alongside the terms of our agreement and scope of project.<br>
             in most cases, i will send invoices to you over PayPal, and the frequency of these invoices will be made clear to you.
-            if you aren't able to use PayPal, we will need to discuss another form of payment.<br/>
-            <br/>
+            if you aren't able to use PayPal, we will need to discuss another form of payment.<br>
+            <br>
 
-            <strong>6. can you do x for FREE?</strong><br/>
+            <strong>6. can you do x for FREE?</strong><br>
             if i'm not being paid, the application being open-source is non-negotiable, and the idea you have
             better interest me enough or expose me to new technologies to make my time enjoyable and/or educational.
             in no way do i guarantee anyone will get anything for free, but shoot your shot anyways, and we'll talk!
@@ -209,11 +209,11 @@
 
             <p>
                 <strong>Boxes 4 Foxes</strong> is a network with servers running improved versions of the popular maps <strong>hightower</strong>, <strong>2fort</strong>, and <strong>turbine</strong>,
-                a hang-out server where players can chat and explore fun custom maps, as well as my custom gamemode <strong>rinstagib</strong>.<br/><br/>
+                a hang-out server where players can chat and explore fun custom maps, as well as my custom gamemode <strong>rinstagib</strong>.<br><br>
 
-                <a target="_blank" href="https://steamcommunity.com/groups/BoxesForFoxes">steam group</a><br/>
-                <a target="_blank" href="https://discord.gg/6rTTw8gUER">discord server</a><br/>
-                <a target="_blank" href="https://boxes4foxes.site.nfoservers.com/sourcebans/">sourcebans</a><br/>
+                <a target="_blank" href="https://steamcommunity.com/groups/BoxesForFoxes">steam group</a><br>
+                <a target="_blank" href="https://discord.gg/6rTTw8gUER">discord server</a><br>
+                <a target="_blank" href="https://boxes4foxes.site.nfoservers.com/sourcebans/">sourcebans</a><br>
             </p>
 
             <div class="vertical-divider"></div>
@@ -221,10 +221,10 @@
             <h3>SwishCast Central</h3>
 
             <p>
-                <strong>SwishCast Central</strong> is a server for the Team Fortress 2 podcast <strong>the SwishCast</strong> meant to provide an improved casual experience.<br/><br/>
+                <strong>SwishCast Central</strong> is a server for the Team Fortress 2 podcast <strong>the SwishCast</strong> meant to provide an improved casual experience.<br><br>
 
-                <a target="_blank" href="https://www.youtube.com/@MANN_Magazine">youtube channel</a><br/>
-                <a target="_blank" href="https://discord.gg/CykAHkzkhx">discord server</a><br/>
+                <a target="_blank" href="https://www.youtube.com/@MANN_Magazine">youtube channel</a><br>
+                <a target="_blank" href="https://discord.gg/CykAHkzkhx">discord server</a><br>
             </p>
         </div>
 
@@ -233,7 +233,7 @@
         <footer>
             <p id="c">
                 <a target="_blank" href="https://github.com/jack-avery/jackavery-web">website source code</a>
-                <br/>
+                <br>
                 <a target="_blank" href="/legal/PRIVACY.pdf">privacy policy</a>
             </p>
         </footer>
